# django-template-tools

./: LICENSE  README.md  pyproject.toml
tests/: test_unextend_template.py
tests/templates/: _base_complex.html  _base_simple.html  child_complex.html  child_simple.html  child_simple_partial_override.html  child_with_load.html  child_with_super.html
unextend_template/: templatetags.py  unextend_template.py
