[tool.poetry]
name = "templates-extends"
version = "0.1.0"
description = ""
authors = ["Greg Turner <greg@gregturner.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
